@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-02T00:49:58Z",
-  "count_outdated" : 188,
-  "uniques_outdated" : 161,
-  "count" : 198,
-  "uniques" : 170,
+  "timestamp" : "2023-10-03T08:14:02Z",
+  "count_outdated" : 189,
+  "uniques_outdated" : 162,
+  "count" : 200,
+  "uniques" : 172,
   "clones" : [
-    {
-      "timestamp": "2023-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-20T00:00:00Z",
       "count": 2,
@@ -76,6 +67,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
