@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 4,
+  "count": 11,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-09-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-20T00:00:00Z",
       "count": 2,
@@ -41,6 +36,11 @@
       "timestamp": "2023-10-01T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-03T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
